--- a/CsvReadWrite/CsvReadWrite.csproj
+++ b/CsvReadWrite/CsvReadWrite.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Csv" Version="2.0.93" />
+  </ItemGroup>
+
 </Project>
